fixed alignemnt of embeds in post editor

--- a/sass/custom_editor_styles.scss
+++ b/sass/custom_editor_styles.scss
@@ -257,7 +257,7 @@ img {
   border-left: none;
 }
 .wp-block-embed {
-  margin: $baseline-height 0;
+  margin: $baseline-height auto;
 }
 .wp-block-code textarea {
   outline: none;
